new heading content

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <main>
         <header id="top">
-            <h1 class="hotpink-header">Maciek Korsan - strona domowa</h1>
+            <h1 class="hotpink-header">Maciek Korsan - strona domowa w ramach WTF</h1>
         </header>
 
         <section>
